test/success/char/main.sk
module Main {

fn main() {
    let a: U8 = 'a';
    let b: U8 = '\n';
}

}