test/errors/instance_not_found_for_result/main.sk

module Main {

fn main() {
    let n = 1;
    let n2 = 2;
    let n3 = &n;
    let b = n + n3;
    let r : &Int = fromInt(b);
}

}
